Cycles speed regression in 2.74 RC2 (CPU only) #44046

Closed
opened 2015-03-19 18:48:56 +01:00 by Mohammad Eideh · 15 comments

System Information
Win 7 x64 SP1 - i7 4770k - GTX 780 Ti

Blender Version
Broken: 2.74 RC2
Worked: 2.73

I was doing some tests in 2.74 RC2 and it seems that CPU rendering speed in Cycles is slower than 2.73a, as shown in the screens below. Also note the higher memory usage and peak for 2.74. On the GPU, 2.74 was only 5 seconds slower.

2.73a
19:52.87
mem: 405.74M - peak: 406.02M
Joeka9H.jpg

2.74 RC2
22:00.19
mem: 472.34M - peak: 472.62M
bAxnB2D.jpg

Exact steps for others to reproduce the error
The blend file is part of an ongoing project/competition so I'd rather send the file directly to developers. I already uploaded the file somewhere and PM'ed the link to DingTo on BA.
Once you guys have it just hit F12 and you're good to go. Textures are all packed in.

**System Information** Win 7 x64 SP1 - i7 4770k - GTX 780 Ti **Blender Version** Broken: 2.74 RC2 Worked: 2.73 I was doing some tests in 2.74 RC2 and it seems that CPU rendering speed in Cycles is slower than 2.73a, as shown in the screens below. Also note the higher memory usage and peak for 2.74. On the GPU, 2.74 was only 5 seconds slower. **2.73a** *19:52.87* mem: 405.74M - peak: 406.02M ![Joeka9H.jpg](https://archive.blender.org/developer/F153202/Joeka9H.jpg) **2.74 RC2** *22:00.19* mem: 472.34M - peak: 472.62M ![bAxnB2D.jpg](https://archive.blender.org/developer/F153204/bAxnB2D.jpg) **Exact steps for others to reproduce the error** The blend file is part of an ongoing project/competition so I'd rather send the file directly to developers. I already uploaded the file somewhere and PM'ed the link to DingTo on BA. Once you guys have it just hit F12 and you're good to go. Textures are all packed in.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quacker

Added subscriber: @quacker

Added subscriber: @TARDISMaker-2

Added subscriber: @TARDISMaker-2

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Thanks for posting this, I got the file. Will check.

Thanks for posting this, I got the file. Will check.

Ok, I checked the file, rendered only 50% image resolution though, apart from that no changes were made.

2.73a: 7:33min, Peak 423.44M
2.74 RC2: 7:32min, Peak 490.04M

So I can confirm the memory increase, which is probably caused by the QBVH, but no speed regression. I tested this on Linux x64 with a i5-3570 (Ivy Bridge). Maybe it's a AVX2 related issue?

Edit: Same test on my Macbook with a Haswell CPU (AVX2):
2.73a: 6:08min, Peak 423.58M
2.74 RC2: 5:47min, Peak 490.18M

Here it's even faster.

Ok, I checked the file, rendered only 50% image resolution though, apart from that no changes were made. 2.73a: 7:33min, Peak 423.44M 2.74 RC2: 7:32min, Peak 490.04M So I can confirm the memory increase, which is probably caused by the QBVH, but no speed regression. I tested this on Linux x64 with a i5-3570 (Ivy Bridge). Maybe it's a AVX2 related issue? Edit: Same test on my Macbook with a Haswell CPU (AVX2): 2.73a: 6:08min, Peak 423.58M 2.74 RC2: 5:47min, Peak 490.18M Here it's even faster.

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Maybe it's only on Windows 7 x64 then? Every scene I render on 7 is also slower with 2.74 than with 2.73 on my PC (Ivy Bridge CPU)

Maybe it's only on Windows 7 x64 then? Every scene I render on 7 is also slower with 2.74 than with 2.73 on my PC (Ivy Bridge CPU)
Author

Interesting results @dingto. I was also wondering if it's a Windows related issue. Anyway, I disabled hair in the scene, set resolution at 50% and re-ran the test again:

2.73a: 04:47:28. Peak: 186.39m
2.74 RC2: 04:56:28. Peak: 188.8m

So hair/particles seem to be the culprit for the memory increase. Render is still slower but the difference is less.

Interesting results @dingto. I was also wondering if it's a Windows related issue. Anyway, I disabled hair in the scene, set resolution at 50% and re-ran the test again: *2.73a*: 04:47:28. *Peak*: 186.39m *2.74 RC2*: 04:56:28. *Peak*: 188.8m So hair/particles seem to be the culprit for the memory increase. Render is still slower but the difference is less.

Added subscriber: @Sergey

Added subscriber: @Sergey

This seems to be msvc-specific because on my desktop with linux i've got about 5% speedup. On my laptop with same linux it was like 2% speed loss (which could be expected ebcause of QBVH, which is less cache-friendly). But on the same laptop and windows 7 it was about same 10% speed loss. What's more interesting, rendering on windows took much longer than on linux in both tests (and t's the same hardware).

This seems to be msvc-specific because on my desktop with linux i've got about 5% speedup. On my laptop with same linux it was like 2% speed loss (which could be expected ebcause of QBVH, which is less cache-friendly). But on the same laptop and windows 7 it was about same 10% speed loss. What's more interesting, rendering on windows took much longer than on linux in both tests (and t's the same hardware).
Sergey Sharybin self-assigned this 2015-03-24 09:17:28 +01:00

This issue was referenced by bf11e362c5

This issue was referenced by bf11e362c5418ec40dc0437d329efceb225eb5ef

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bf11e362c5.

Closed by commit bf11e362c5.

This issue was referenced by blender/cycles@537cfea049

This issue was referenced by blender/cycles@537cfea0498da52e0197acef813b33945bce696c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44046
No description provided.